Fix mobile layout problem.

--- a/themes/finna2/less/finna/r2.less
+++ b/themes/finna2/less/finna/r2.less
@@ -98,7 +98,6 @@
 }
 @media (max-width: @screen-sm-min) {
   .r2-restricted-record-register {
-    display: block;
     .r2-restricted-info {
       float: left;
     }
